STYLE: Darkened footer nav color to address contrast issues

--- a/css/main.scss
+++ b/css/main.scss
@@ -497,7 +497,7 @@ address {
 
   a {
     font-size: 0.8rem;
-    color: #ccc;
+    color: #6e6e6e;
     text-decoration: none;
     text-transform: uppercase;
     transition: color 0.2 ease-out;
@@ -596,6 +596,7 @@ address {
   background: #eee;
   font-style: oblique;
   font-size: 0.9rem;
+  font-weight: normal;
 }
 
 .footer h6 {
